<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:padding="10dp">
        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/menu_button3"
            android:text="@string/close_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:fontFamily="@font/mainfont"/>
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/menu_button3"
            android:text="@string/delete_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:fontFamily="@font/mainfont" />
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/menu_button3"
            android:text="@string/save_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:fontFamily="@font/mainfont" />
</LinearLayout>