<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/graph1_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorFont"
                    app:fontFamily="@font/mainfont" />
                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/graph2_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorFont"
                    app:fontFamily="@font/mainfont"  />
                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart2"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/graph3_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorFont"
                    app:fontFamily="@font/mainfont" />
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart3"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>