<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Fragment2">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:text="@string/today_date_string"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorFont"
            app:fontFamily="@font/mainfont"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="14dp"
            android:gravity="end">
            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_string"
                android:textSize="12sp"
                android:textColor="@color/colorFont"
                app:fontFamily="@font/mainfont" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/w01d" />
                <TextView
                    android:id="@+id/weatherDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/weather_string"
                    android:textSize="12sp"
                    android:textColor="@color/colorFont"
                    app:fontFamily="@font/mainfont"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/contentsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topLayout" >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_alignParentTop="true"
            app:cardBackgroundColor="#ffffffff"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp" >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        app:cardBackgroundColor="#ffffffff"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp" >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <EditText
                                android:id="@+id/contentsInput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:background="#FFFFFF"
                                android:gravity="top"
                                android:hint="@string/input_contents_hint"
                                android:maxLength="180"
                                android:textColorHint="@color/colorSub"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:fontFamily="@font/mainfont" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_margin="10dp"
                                android:gravity="end">
                                <TextView
                                    android:id="@+id/numLettersTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="20dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:text="@string/num_letters"
                                    android:textSize="12sp"
                                    app:fontFamily="@font/mainfont" />
                                <Button
                                    android:id="@+id/doneButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="20dp"
                                    android:text="@string/done_button"
                                    android:textSize="12sp"
                                    android:background="@drawable/menu_button3"
                                    android:textColor="@color/colorPrimary"
                                    app:fontFamily="@font/mainfont" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp" >
                        <ImageView
                            android:id="@+id/pictureImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/imagetoset" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/moodLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        app:cardBackgroundColor="#ffffffff"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp" >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <com.github.channguyen.rsv.RangeSliderView
                                android:id="@+id/sliderView"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="8dp"
                                app:barHeightPercent="0.1"
                                app:filledColor="@color/colorSlider"
                                app:emptyColor="@color/colorSliderEmpty"
                                app:rangeCount="5"
                                app:sliderRadiusPercent="0.3" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="8dp"
                                android:orientation="horizontal" >
                                <ImageView
                                    android:id="@+id/image_mood01"
                                    android:layout_width="0dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="1"
                                    android:background="#FFFFFF"
                                    android:src="@drawable/smile1_48" />
                                <ImageView
                                    android:id="@+id/image_mood02"
                                    android:layout_width="0dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="1"
                                    android:src="@drawable/smile2_48" />
                                <ImageView
                                    android:id="@+id/image_mood03"
                                    android:layout_width="0dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="1"
                                    android:src="@drawable/smile3_48" />
                                <ImageView
                                    android:id="@+id/image_mood04"
                                    android:layout_width="0dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="1"
                                    android:src="@drawable/smile4_48" />
                                <ImageView
                                    android:id="@+id/image_mood05"
                                    android:layout_width="0dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="1"
                                    android:src="@drawable/smile5_48" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</RelativeLayout>
